kyverno/verify-image-signature.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: verify-cosign-signature
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - devsecops-prod
      verifyImages:
        - imageReferences:
            - "quay.io/ramzi_romdhan/*"
          imageRegistryCredentials:
            secrets:
              - quay-creds
          attestors:
            - count: 1
              entries:
                - keys:
                    publicKeys: |
                      -----BEGIN PUBLIC KEY-----
                      MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEMazjYuR0e/L97OqeyQWSXleZXsEH
[...]
                      -----END PUBLIC KEY-----
